@@ -45,8 +45,6 @@ dependencies {
 
     implementation("org.jabref:afterburner.fx")
 
-    implementation("commons-cli:commons-cli")
-
     implementation("org.apache.lucene:lucene-queryparser")
 
     implementation("io.github.adr:e-adr")
@@ -75,11 +73,11 @@ application {
     // Also passed to launcher (https://badass-jlink-plugin.beryx.org/releases/latest/#launcher)
     applicationDefaultJvmArgs = listOf(
         // Enable JEP 450: Compact Object Headers
-        "-XXUnlockExperimentalVMOptions", "-XXUseCompactObjectHeaders",
+        "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCompactObjectHeaders",
 
         // Default garbage collector is sufficient for CLI APP
-        // "-XXUseZGC", "-XXZUncommit",
-        // "-XXUseStringDeduplication",
+        // "-XX:+UseZGC", "-XX:+ZUncommit",
+        // "-XX:+UseStringDeduplication",
 
         "--enable-native-access=com.sun.jna,javafx.graphics,org.apache.lucene.core"
     )
